Fixed overflow issue on the /resources/ page

--- a/assets/css/app/hub.scss
+++ b/assets/css/app/hub.scss
@@ -63,6 +63,7 @@
     border-bottom: 1px solid #dadada;
     border-radius: 0px;
     font-size: 15px;
+    overflow: hidden;
 
     transition: all 300ms ease;
 }
